file uploader component and css refactoring

--- a/src/app/main/projects/project/files-uploader/files-uploader.component.html
+++ b/src/app/main/projects/project/files-uploader/files-uploader.component.html
@@ -1,1 +1,62 @@
-<p>files-uploader works!</p>
+
+
+
+<form [formGroup]="uploadFilesForm" (ngSubmit)="submitUploadFilesForm()" class="form detail-form">
+	<h3 class="form-title col-12">Upload Files</h3>
+
+	<div dropzone class="dropzone col-12"
+		 (hovered)="toggleHover($event)" (dropped)="onDrop($event)" [class.hovering]="isHovering">
+		<h4>drop files here</h4>
+	</div>
+
+
+	<div class="row">
+		<div class="col-4">
+			<h4>Preview</h4>
+		</div>
+		<div class="col-8">
+			<h4>Display name</h4>
+		</div>
+	</div>
+
+	<ul>
+		<li class="file-list-item row" *ngFor="let file of files">
+			<img src="lala" alt="file preview" class="file-preview col-4">
+			<div class="form-group col-8">
+<!--				<label class="form-group-label">{{file}}</label>-->
+				<input class="form-input" type="text" formControlName="displayName" placeholder="Enter a name for this file">
+			</div>
+		</li>
+	</ul>
+
+
+	<p class="form-error col-12" *ngIf="uploadFilesForm.errors">{{uploadFilesForm.errors.message}}</p>
+	<button type="submit" class="btn success-btn form-btn">Save</button>
+</form>
+
+<!--<li class="file-list-item">-->
+
+<!--	<div class="page-preview" [ngStyle]="{'background-image': 'url(' +file.downloadURL+ ')' }"></div>-->
+
+<!--	<form [formGroup]="fileItemForm" (ngSubmit)="saveFileItemForm()">-->
+<!--		<div class="form-group">-->
+<!--			<label class="form-group-label">Page name</label>-->
+<!--			<input-->
+<!--				class="form-input"-->
+<!--				type="text"-->
+<!--				formControlName="displayName"-->
+<!--				placeholder="A short declarative name would help..."-->
+<!--			>-->
+<!--		</div>-->
+<!--		<div class="flex-col-container item-actions">-->
+<!--			<button type="submit" class="btn success-btn form-btn">-->
+<!--				Update page name-->
+<!--			</button>-->
+
+<!--			<button type="button" class="btn danger-btn" (click)="onDeleteClicked(file)">-->
+<!--				Delete page-->
+<!--			</button>-->
+<!--		</div>-->
+<!--	</form>-->
+
+<!--</li>-->
