--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -9,7 +9,8 @@
 	text-align: right;
 	margin-bottom: 10px;
 }
-.form-error {
+.form-error,
+.form-inline-error {
 	text-align: center;
 	margin-bottom: 10px;
 	color: $theme-error;
