--- a/src/app/main/projects/projects-list/projects-list.component.html
+++ b/src/app/main/projects/projects-list/projects-list.component.html
@@ -2,10 +2,11 @@
 
 <div class="flex-container">
 	<div *ngFor="let project of projects" class="item-preview-container">
-		<img
-			[src]="project.previewImage"
-			alt="Project Preview Image"
-			class="item-preview">
+		<div class="item-preview">
+			<img
+				[src]="project.previewImage"
+				alt="Project preview">
+		</div>
 		<div class="item-actions">
 			<button type="button" class="transparent-btn" (click)="navToProjectDetails(project)">View Project</button>
 		</div>
