--- a/src/assets/scss/layout/_gallery.scss
+++ b/src/assets/scss/layout/_gallery.scss
@@ -23,7 +23,14 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 
 	.item-preview {
 		min-width: 280px;
-		min-height: 200px;
+		min-height: 10rem;
+		overflow: hidden;
+		position: relative;
+		img {
+			position: absolute;
+			max-width: 100%;
+			height: auto;
+		}
 	}
 
 	.item-actions {
@@ -85,4 +92,36 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 
 	}
 
+}
+
+// new gallery
+
+.gallery-item {
+	width: 280px;
+	overflow: hidden;
+
+	background-color: $theme-light;
+	border: 1px $gallery solid;
+	border-radius: 4px;
+	margin: 20px;
+
+	display: flex;
+	flex-direction: column;
+
+	.gallery-item-preview {
+		min-width: 280px;
+		min-height: 10rem;
+		overflow: hidden;
+		position: relative;
+		img {
+			position: absolute;
+			max-width: 100%;
+			height: auto;
+		}
+	}
+
+	div {
+		flex: 0 0 25%;
+		background-color: $white;
+	}
 }
