--- a/src/assets/scss/layout/_gallery.scss
+++ b/src/assets/scss/layout/_gallery.scss
@@ -89,7 +89,6 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 		.item-actions {
 			opacity: 1;
 		}
-
 	}
 
 }
@@ -108,6 +107,10 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 	display: flex;
 	flex-direction: column;
 
+	transition: box-shadow $transition-delay $transition-easing;
+	transition: transform $transition-delay $transition-easing;
+
+
 	.gallery-item-preview {
 		min-width: 280px;
 		min-height: 10rem;
@@ -115,13 +118,24 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 		position: relative;
 		img {
 			position: absolute;
-			max-width: 100%;
+			width: 100%;
 			height: auto;
 		}
 	}
 
-	div {
-		flex: 0 0 25%;
-		background-color: $white;
+	.gallery-item-details {
+		background-color: $theme-light;
+		padding: 1rem;
+		text-align: center;
 	}
+
+	&:hover {
+		box-shadow: 0px 3px 10px 2px rgba(0,0,0,0.2);
+		transform: scale(1.05);
+
+		//.gallery-item-preview {
+		//	filter: brightness(60%);
+		//}
+	}
+
 }
