files-list - ui to delete a file

--- a/src/app/main/projects/project/files-list/files-list.component.html
+++ b/src/app/main/projects/project/files-list/files-list.component.html
@@ -6,6 +6,7 @@
 			</div>
 			<div class="gallery-item-details">
 				{{file.name}}
+				<i class="fas fa-trash" (click)="deleteFile(file.id)" ></i>
 			</div>
 		</div>
 	</div>
