--- a/src/app/main/page-not-found/page-not-found.component.html
+++ b/src/app/main/page-not-found/page-not-found.component.html
@@ -1,6 +1,8 @@
 
 
 <h2 class="page-header">Oops! Page not found!</h2>
-<div class="flex-container">
+
+<div class="text-center">
 	<a [routerLink]="'/home'">Return to home</a>
 </div>
+
