--- a/src/app/main/projects/project/flow-edit/flow-edit.component.html
+++ b/src/app/main/projects/project/flow-edit/flow-edit.component.html
@@ -1,1 +1,6 @@
-<p>flow-edit works!</p>
+<div class="row">
+	<div class="col-12 text-center">
+		<h4 class="page-header">No files have been uploaded yet...</h4>
+		<a [routerLink]="'../files-add'">Upload files</a>
+	</div>
+</div>
