--- a/src/app/main/projects/project/files-list/files-list.component.html
+++ b/src/app/main/projects/project/files-list/files-list.component.html
@@ -1,4 +1,8 @@
 <div class="row">
+	<div *ngIf="!files.length" class="col-12 text-center">
+		<h4 class="page-header">No files have been uploaded yet...</h4>
+		<a [routerLink]="'../files-add'">Upload files</a>
+	</div>
 	<div *ngFor="let file of files" class="col-2">
 		<div class="gallery-item">
 			<div class="gallery-item-preview">
