--- a/src/assets/scss/layout/_gallery.scss
+++ b/src/assets/scss/layout/_gallery.scss
@@ -5,12 +5,10 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 .gallery-item {
 	width: 280px;
 	overflow: hidden;
-
 	background-color: $theme-light;
 	border: 1px $gallery solid;
 	border-radius: 4px;
 	margin: 20px;
-
 	display: flex;
 	flex-direction: column;
 
@@ -32,7 +30,6 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 	.gallery-item-details {
 		background-color: $theme-light;
 		padding: 1rem;
-
 		i {
 			float: right;
 			&:hover {
@@ -40,19 +37,30 @@ $transition-easing: cubic-bezier(0.075, 0.82, 0.165, 1);
 			}
 		}
 	}
-
 	.gallery-item-actions {
 		padding: 0 1rem 1rem;
 		button {
 			float: right;
 		}
 	}
-
 	&:hover {
 		box-shadow: 0px 3px 10px 2px rgba(0,0,0,0.2);
 		transform: scale(1.05);
 	}
 
+	&.small {
+		width: 230px;
+		.gallery-item-preview {
+			min-height: 7.1rem;
+		}
+		.gallery-item-details {
+			padding: 0.5rem;
+		}
+	}
+	&.selected {
+		box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.3);
+		transform: scale(1);
+	}
 }
 
 .create-new-item {
