--- a/src/app/main/projects/project/flow-preview/flow-preview.component.html
+++ b/src/app/main/projects/project/flow-preview/flow-preview.component.html
@@ -1,1 +1,5 @@
 <p>flow-preview works!</p>
+
+<app-editor
+	imgUrl="https://s3.amazonaws.com/cdn-origin-etr.akc.org/wp-content/uploads/2017/11/12225358/Pug-On-White-01.jpg"
+></app-editor>
