--- a/src/assets/scss/components/_selection-menu.scss
+++ b/src/assets/scss/components/_selection-menu.scss
@@ -4,7 +4,8 @@
 }
 
 .selection-menu {
-	max-width: 400px;
+	padding: 15px;
+	width: 300px;
 
 	border: $border-width solid $mercury;
 	border-radius: 4px;
