--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -16,60 +16,9 @@
 	color: $theme-error;
 }
 
-.login-form {
-	margin-top: 10vh;
-    display: flex;
-    flex-direction: column;
-	align-items: center;
-
-    .form-group {
-        margin-bottom: 2em;
-        min-width: 400px;
-        display: flex;
-        flex-direction: column;
-        justify-content: stretch;
-        label {
-            text-transform: uppercase !important;
-            letter-spacing: 0.5em;
-            font-size: 0.8em;
-        }
-        input {
-            border: none;
-            border-bottom: 2px solid $input-default;
-            line-height: 2.5em;
-			background-color: $theme-background;
-            &:focus {
-                border-bottom: 2px solid $input-focus;
-            }
-			&::placeholder {
-				font-family: $font-handwritten;
-				font-style: italic;
-				font-size: 0.8em;
-			}
-        }
-    }
-    button {
-        text-transform: lowercase;
-        letter-spacing: 0.25em;
-    }
-}
 
 .img-preview {
     max-height: 200px;
-}
-
-.form-container {
-	padding: 20px;
-	margin: 30px;
-	border: 1px $gallery solid;
-
-	position: relative;
-	.x-btn {
-		position: absolute;
-		top: -15px;
-    	right: -15px;
-    	background-color: $white;
-	}
 }
 
 .detail-form {
@@ -81,35 +30,85 @@
 .detail-form {
 	max-width: 80%;
 	margin: 0 auto;
+}
+
+.form-title,
+.form-btn {
+	align-self: flex-end;
+	margin-top: 10px;
+}
+.form-group {
+	display: flex;
+	margin-bottom: 5px;
+
+	.form-group-label {
+		flex-grow: 1;
+		width: 0;
+		padding: 12px 10px;
+	}
+	input,
+	textarea,
+	select {
+		height: fit-content;
+		flex-grow: 3;
+		border: 2px solid $mercury;
+		border-radius: 4px;
+		padding: 10px;
+		background-color: $theme-light;
+		&::placeholder {
+			font-family: $font-handwritten;
+			font-style: italic;
+			font-size: 0.8em;
+		}
+	}
+}
+
+.btn-group {
+	display: flex;
+	justify-content: space-between;
+}
+
+
+
+.login-form {
+	margin-top: 10vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 
 	.form-title,
 	.form-btn {
-		align-self: flex-end;
+		align-self: center;
 		margin-top: 10px;
 	}
 	.form-group {
+		margin-bottom: 2em;
+		min-width: 400px;
 		display: flex;
-		margin-bottom: 5px;
-
-		.form-group-label {
-			flex-grow: 1;
-			width: 0;
-			padding: 12px 10px;
+		flex-direction: column;
+		justify-content: stretch;
+		label {
+			text-transform: uppercase !important;
+			letter-spacing: 0.5em;
+			font-size: 0.8em;
 		}
-		input,
-		textarea,
-		select {
-			height: fit-content;
-			flex-grow: 3;
-			border: 2px solid $mercury;
-			border-radius: 4px;
-			padding: 10px;
-			background-color: $theme-light;
+		input {
+			border: none;
+			border-bottom: 2px solid $input-default;
+			line-height: 2.5em;
+			background-color: $theme-background;
+			&:focus {
+				border-bottom: 2px solid $input-focus;
+			}
 			&::placeholder {
 				font-family: $font-handwritten;
 				font-style: italic;
 				font-size: 0.8em;
 			}
 		}
+	}
+	button {
+		text-transform: lowercase;
+		letter-spacing: 0.25em;
 	}
 }
