refactor selection menu component

--- a/src/app/main/projects/project/flow-edit/flow-edit.component.html
+++ b/src/app/main/projects/project/flow-edit/flow-edit.component.html
@@ -5,6 +5,11 @@
 		(onAreaSelected)="areaSelected($event)"
 	></app-editor>
 
+	<div *ngIf="showSelectionMenu" class="selection-menu-container">
+		<app-selection-menu [files]="files" (onSubmit)="saveLink($event)" (onClose)="closeSelectionMenu()"></app-selection-menu>
+	</div>
+
+
 	<div class="row navigator-area">
 		<div *ngIf="!files.length" class="col-12 text-center">
 			<h4 class="page-header">No files have been uploaded yet...</h4>
