create a link referenced to a file in firestore

--- a/src/app/main/projects/project/flow-edit/flow-edit.component.html
+++ b/src/app/main/projects/project/flow-edit/flow-edit.component.html
@@ -7,9 +7,11 @@
 	></app-editor>
 
 	<div *ngIf="showSelectionMenu" class="selection-menu-container">
-		<app-selection-menu [files]="files" (onSubmit)="saveLink($event)" (onClose)="closeSelectionMenu()"></app-selection-menu>
+		<app-selection-menu
+			[files]="files"
+			[activeFileId]="activeFile?.id"
+			(onSubmit)="saveLink($event)" (onClose)="closeSelectionMenu()"></app-selection-menu>
 	</div>
-
 
 	<div class="row navigator-area">
 		<div *ngIf="!files.length" class="col-12 text-center">
