--- a/src/app/main/projects/project/flow-edit/flow-edit.component.html
+++ b/src/app/main/projects/project/flow-edit/flow-edit.component.html
@@ -6,11 +6,32 @@
 		(onAreaSelected)="areaSelected($event)"
 	></app-editor>
 
-	<div *ngIf="showSelectionMenu" class="selection-menu-container">
-		<app-selection-menu
-			[files]="files"
-			[activeFileId]="activeFile?.id"
-			(onSubmit)="saveLink($event)" (onClose)="closeSelectionMenu()"></app-selection-menu>
+	<div class="row actions-area">
+		<div>
+		<button type="button" (click)="toggleLinkVisibility()" class="btn info-btn small-btn">Show links</button>
+	</div>
+
+		<div *ngIf="showSelectionMenu">
+			<form [formGroup]="linkToFileForm" (ngSubmit)="saveLink()">
+				<div class="form-group">
+					<label class="form-group-label">Link to:</label>
+					<select formControlName="fileId">
+						<ng-container *ngFor="let file of files">
+							<option
+								[value]="file.id"
+								[disabled]="file.id === activeFile?.id"
+							>{{file.name}}</option>
+						</ng-container>
+					</select>
+				</div>
+				<button type="submit" class="btn success-btn small-btn">Save</button>
+				<button type="button" (click)="closeSelectionMenu()" class="btn danger-btn small-btn">Cancel</button>
+
+			</form>
+
+		</div>
+
+
 	</div>
 
 	<div class="row navigator-area">
