--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,7 @@
 @import './assets/scss/components/_forms';
 @import './assets/scss/components/_file-uploader';
 @import './assets/scss/components/_editor';
+@import './assets/scss/components/_selection-menu';
 @import './assets/scss/components/_logo';
 @import './assets/scss/components/_modal';
 
