center image in flow edit and flow preview pages

--- a/src/app/main/projects/project/flow-preview/flow-preview.component.html
+++ b/src/app/main/projects/project/flow-preview/flow-preview.component.html
@@ -1,4 +1,5 @@
-<p>flow-preview works!</p>
+
+<h3 class="page-header">flow-preview works!</h3>
 
 <app-preview-editor
 	[imgUrl]="activeFile?.base64"
