--- a/src/assets/scss/components/_editor.scss
+++ b/src/assets/scss/components/_editor.scss
@@ -3,6 +3,8 @@
 
 .canvas-container {
 	position: relative;
+	display: block;
+	margin: 1rem auto 0 auto;
 	.canvas-background {
 		box-shadow: 1px 1px 9px -2px rgba(0, 0, 0, 0.3);
 		position: absolute;
