--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="loginForm" (ngSubmit)="firebaseLogin()" class="login-form">
+<form [formGroup]="loginForm" (ngSubmit)="onLoginSubmitted()" class="login-form">
 	<h2 class="form-title">Login</h2>
 	<div class="form-group">
 		<label>Email</label>
