moving auth state control to appComponent - wip

--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -20,7 +20,7 @@
 		</li>
 		<li *ngIf="currentUser"  class="nav-item">
 			<a (click)="toggleBubbleMenu()">
-				Hello, {{currentUser.username}}!
+				Hello, {{currentUser.email}}!
 			</a>
 		</li>
 	</ul>
