--- a/src/app/main/projects/project/project-details-form/project-details-form.component.html
+++ b/src/app/main/projects/project/project-details-form/project-details-form.component.html
@@ -3,12 +3,16 @@
 <form [formGroup]="projectDetailForm" (ngSubmit)="submitProjectDetailForm()" class="form detail-form">
 	<h3 class="form-title">Edit Project Details</h3>
 	<div class="form-group">
-		<label class="form-group-label">Project name</label>
-		<input class="form-input" type="text" formControlName="name">
+		<label class="input-label">Project name</label>
+		<div class="input-group">
+			<input class="form-input" type="text" formControlName="name">
+		</div>
 	</div>
 	<div class="form-group">
-		<label class="form-group-label">Description</label>
-		<input class="form-input" type="text" formControlName="description">
+		<label class="input-label">Description</label>
+		<div class="input-group">
+			<input class="form-input" type="text" formControlName="description">
+		</div>
 	</div>
 	<p class="form-error" *ngIf="projectDetailForm.errors">{{projectDetailForm.errors.message}}</p>
 	<button type="submit" class="btn success-btn form-btn">Save</button>
