--- a/src/app/main/profile/profile.component.html
+++ b/src/app/main/profile/profile.component.html
@@ -4,20 +4,28 @@
 	<form [formGroup]="userDetailForm" (ngSubmit)="submitUserDetailForm()" class="form detail-form">
 		<h3 class="form-title">User details</h3>
 		<div class="form-group">
-			<label class="form-group-label">Username</label>
-			<input class="form-input" type="text" formControlName="username">
+			<label class="input-label">Username</label>
+			<div class="input-group">
+				<input class="form-input" type="text" formControlName="username">
+			</div>
 		</div>
 		<div class="form-group">
-			<label class="form-group-label">Email</label>
-			<input class="form-input" type="email" formControlName="email">
+			<label class="input-label">Email</label>
+			<div class="input-group">
+				<input class="form-input" type="email" formControlName="email">
+			</div>
 		</div>
 		<div class="form-group">
-			<label class="form-group-label">Role</label>
-			<input class="form-input" type="text" formControlName="role">
+			<label class="input-label">Role</label>
+			<div class="input-group">
+				<input class="form-input" type="text" formControlName="role">
+			</div>
 		</div>
 		<div class="form-group">
-			<label class="form-group-label">Active projects</label>
-			<input class="form-input" type="number" formControlName="projectsCount" disabled>
+			<label class="input-label">Active projects</label>
+			<div class="input-group">
+				<input class="form-input" type="number" formControlName="projectsCount" disabled>
+			</div>
 		</div>
 		<button type="submit" class="btn success-btn form-btn">Save</button>
 	</form>
@@ -27,29 +35,36 @@
 	<form [formGroup]="changePasswordForm" (ngSubmit)="submitChangePasswordForm()" class="form detail-form">
 		<h3 class="form-title">Change Password</h3>
 		<div class="form-group">
-			<label class="form-group-label">Old Password</label>
-			<input class="form-input" type="password" formControlName="oldPassword">
-			<p class="form-inline-error"
-			   *ngIf="changePasswordForm.get('oldPassword').touched && changePasswordForm.get('oldPassword').errors">
-				{{ changePasswordForm.get('oldPassword').errors.required ? 'Field is required.' : '' }}
-			</p>
+			<label class="input-label">Old Password</label>
+			<div class="input-group">
+				<input class="form-input" type="password" formControlName="oldPassword">
+				<p class="form-inline-error"
+				   *ngIf="changePasswordForm.get('oldPassword').touched && changePasswordForm.get('oldPassword').errors">
+					{{ changePasswordForm.get('oldPassword').errors.required ? 'Field is required.' : '' }}
+				</p>
+			</div>
 		</div>
 		<div class="form-group">
-			<label class="form-group-label">New Password</label>
-			<input class="form-input" type="password" formControlName="password">
-			<p class="form-inline-error"
-			   *ngIf="changePasswordForm.get('password').touched && changePasswordForm.get('password').errors">
-				{{ changePasswordForm.get('password').errors.minlength ? 'Password should be at least 6 characters.' : '' }}
-				{{ changePasswordForm.get('password').errors.required ? 'Field is required.' : '' }}
-			</p>
+			<label class="input-label">New Password</label>
+			<div class="input-group">
+				<input class="form-input" type="password" formControlName="password">
+				<p class="form-inline-error"
+				   *ngIf="changePasswordForm.get('password').touched && changePasswordForm.get('password').errors">
+					{{ changePasswordForm.get('password').errors.minlength ? 'Password should be at least 6 characters.' : '' }}
+					{{ changePasswordForm.get('password').errors.required ? 'Field is required.' : '' }}
+				</p>
+			</div>
 		</div>
 		<div class="form-group">
-			<label class="form-group-label">Confirm password</label>
-			<input class="form-input" type="password" formControlName="confirmPassword">
-			<p class="form-inline-error"
-			   *ngIf="changePasswordForm.get('confirmPassword').touched && changePasswordForm.errors && changePasswordForm.errors.comparePasswords">
-				Passwords don't match.
-			</p>
+			<label class="input-label">Confirm password</label>
+			<div class="input-group">
+				<input class="form-input" type="password" formControlName="confirmPassword">
+				<p class="form-inline-error"
+				   *ngIf="changePasswordForm.get('confirmPassword').touched && changePasswordForm.errors && changePasswordForm.errors.comparePasswords">
+					Passwords don't match.
+				</p>
+			</div>
+
 		</div>
 		<button type="submit" class="btn success-btn form-btn">Update Password</button>
 	</form>
@@ -64,12 +79,15 @@
 			<p>Please type in "<strong>I want to delete my account</strong>" to confirm.</p>
 		</div>
 		<div class="form-group">
-			<label class="form-group-label">Security quote</label>
-			<input class="form-input" type="text" formControlName="confirmDelete">
-			<p class="form-inline-error"
-			   *ngIf="deleteAccountForm.get('confirmDelete').touched && deleteAccountForm.get('confirmDelete').errors">
-				{{ deleteAccountForm.get('confirmDelete').errors.required ? 'Field is required.' : '' }}
-			</p>
+			<label class="input-label">Security quote</label>
+			<div class="input-group">
+				<input class="form-input" type="text" formControlName="confirmDelete">
+				<p class="form-inline-error"
+				   *ngIf="deleteAccountForm.get('confirmDelete').touched && deleteAccountForm.get('confirmDelete').errors">
+					{{ deleteAccountForm.get('confirmDelete').errors.required ? 'Field is required.' : '' }}
+				</p>
+			</div>
+
 		</div>
 		<button type="submit" class="btn success-btn form-btn">Delete my account</button>
 	</form>
